[package]
name = "leptos-borrow-example"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
gloo = '0.11'
gloo-console = '0.3'
serde_json = '1.0'
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = '0.2.91'
wasm-bindgen-futures = '0.4'
